# monitorpro

./: .gitignore  CHANGELOG.md  README.md  claude.md  docker-compose.yml  get-cert.sh  nginx.conf  setup.sh
.github/workflows/: ci.yml  release.yml
backend/: .env.example  Dockerfile  alembic.ini  mypy.ini  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: alerts.py  auth.py  companies.py  downloads.py  machines.py  metrics.py  reports.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  alert.py  company.py  event_log.py  machine.py  metric.py  user.py
backend/app/schemas/: alert.py  auth.py  machine.py  metric.py
backend/app/services/: alert_engine.py  notifier.py  retention.py  topology.py
docs/: CLAUDE_CODE_PROMPT.md  VERSIONING.md
frontend/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: client.js
frontend/src/components/: AlertBadge.jsx  LiveChart.jsx  MachineCard.jsx  MetricGauge.jsx  Navbar.jsx  Sidebar.jsx
frontend/src/hooks/: useAlerts.js  useAuth.js  useCompanies.js  useMachines.js  useMetrics.js
probe/: build_exe.bat  config.ini.template  installer.py  probe_agent.py  requirements.txt  tray_app.py
probe-rust/: Cargo.toml  build.bat  build.rs
probe-rust/.cargo/: config.toml
probe-rust/src/: api.rs  config.rs  installer.rs  installer_gui.rs  ipc.rs  main.rs  service.rs  status_window.rs  tray.rs
probe-rust/src/collectors/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  windows_ext.rs
probe/collectors/: cpu.py  disk.py  event_logs.py  hardware.py  memory.py  network.py  processes.py  security.py  services.py  software.py
(+8 files in other folders)
